C20: biz_ops service : models.py and schemas.py are added & set.

--- a/biz_auth/index/templates/index/index.html
+++ b/biz_auth/index/templates/index/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home - My App</title>
+    <title>BizAuth - Homepage</title>
 </head>
 <body>
-    <h1>Welcome to the Django Service</h1>
+    <h1>Welcome to the BizAuth Service</h1>
     <p>This is a simple Django homepage using a template.</p>
 </body>
 </html>
